# orca-python

./: .gitignore  CIBUILDWHEEL_FIX.md  GITHUB_ACTIONS_FIX.md  LICENSE  LICENSE_CONFIG_FIX.md  MANIFEST.in  MULTI_LINUX_FIX.md  Makefile  README.md  SETUP_SUMMARY.md  build.sh  example.py  pyproject.toml  requirements-dev.txt  setup.py  test_cibuildwheel.sh  test_orca.py  validate_setup.py
.github/workflows/: build.yml
python/: pybind11_wrapper.cpp
src/: orca.cpp  orca.h  orca_declarations.h
src/orca_graphlets.egg-info/: PKG-INFO  SOURCES.txt
